feat(admin): can completely manage applications from admin
